facet-lua/src/snapshots/facet_lua__annotations__tests__enum_rename_all_snake_case.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@alias ValidationErrorCode "circular_dependency" | "invalid_naming" | "unknown_requirement"
