facet-lua/src/snapshots/facet_lua__annotations__tests__enum_with_variant_docs.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@alias Color
---| "Red" # The color red
---| "Green" # The color green
---| "Blue" # The color blue
