facet-lua/src/snapshots/facet_lua__annotations__tests__hashmap.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@class Registry
---@field entries table<string, integer>
