facet-lua/src/snapshots/facet_lua__annotations__tests__internally_tagged_enum.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@alias Request Request.Ping | Request.Echo

---@class Request.Echo
---@field type "Echo"
---@field message string

---@class Request.Ping
---@field type "Ping"
