facet-lua/src/snapshots/facet_lua__annotations__tests__multi_type_generation.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@alias Role "Admin" | "User"

---@class User
---@field name string
---@field age integer
