facet-lua/src/snapshots/facet_lua__annotations__tests__nested_types.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@class Inner
---@field value integer

---@class Outer
---@field inner Inner
---@field name string
