facet-lua/src/snapshots/facet_lua__annotations__tests__optional_field.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@class Config
---@field required string
---@field optional? string
