facet-lua/src/snapshots/facet_lua__annotations__tests__simple_enum.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@alias Status "Active" | "Inactive" | "Pending"
