facet-lua/src/snapshots/facet_lua__annotations__tests__simple_struct.snap
---
source: facet-lua/src/annotations.rs
expression: lua
---
---@class User
---@field name string
---@field age integer
